# LightX2V

configs/dist_infer/: wan22_moe_i2v_fa4_profile.json
configs/wan22/: wan_moe_i2v_distill_nvfp4_sparse_attn.json  wan_moe_i2v_distill_nvfp4_sparse_attn_cuda_graph.json  wan_moe_i2v_distill_nvfp4_sparse_attn_thor.json
lightx2v/: infer.py
lightx2v/common/offload/: manager.py
lightx2v/common/ops/attn/: __init__.py  cute_dsl_vit_fmha.py  flash_attn.py  sla_attn.py  sparse_operator.py
lightx2v/common/ops/attn/kernels/: sla_kernel.py
lightx2v/models/networks/wan/infer/offload/: cuda_graph.py  transformer_infer.py
lightx2v/models/networks/wan/weights/: transformer_weights.py
lightx2v_kernel/: CMakeLists.txt  README.md
lightx2v_kernel/csrc/: common_extension.cc
lightx2v_kernel/csrc/attention/: cute_dsl_vit_fmha_sm110.cpp
lightx2v_kernel/csrc/gemm/: nvfp4_scaled_mm_kernels_sm120.cu
lightx2v_kernel/include/: lightx2v_kernel_ops.h
lightx2v_kernel/python/lightx2v_kernel/: __init__.py  fmha.py
scripts/dist_infer/: run_wan22_moe_i2v_fa4_profile.sh
scripts/wan22/distill/: run_wan22_moe_i2v_extreme_cuda_graph.sh  run_wan22_moe_i2v_extreme_cutedsl_thor.sh
